--- a/style.css
+++ b/style.css
@@ -23,36 +23,22 @@
 
 body {
   margin: 0 0 0 15rem;
+  background-color: var(--primary-color);
 }
 .navBar {
   width: 15rem;
-  background-color: var(--primary-color);
+  background-color: var(--dark-color);
   height: 100vh;
   position: fixed;
+  z-index: 100;
   left: 0;
-  box-shadow: 0.5rem 1rem 1rem 0.05rem var(--dark-color);
+  box-shadow: 0.5rem 1rem 3rem var(--dark-color);
   overflow-x: hidden;
-}
-
-.logo {
-  height: 4rem;
-  background-color: var(--red-color);
-  display: flex;
-  width: 100%;
-  align-items: center;
-  padding-left: 5rem;
-}
-
-.logo-text {
-  color: var(--light-color);
-  font-size: 1.5rem;
-  font-weight: 700;
 }
 
 .nav-ul {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
 }
 
 .nav-link {
@@ -61,10 +47,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1rem 0;
-  /* padding: .5rem 3rem .5rem 3rem; */
 }
 
-.nav-link:first-child {
+.nav-link:hover {
   background: var(--red-color);
 }
 
@@ -98,10 +83,6 @@ body {
   bottom: 0;
 }
 
-.nav-link:hover {
-  background-color: #fff3;
-}
-
 .nav-link:active {
   background-color: var(--red-color);
 }
@@ -126,36 +107,28 @@ main {
 }
 
 .body-head-tittle {
-  font-size: 1.5rem;
-}
-
-.my-name-text {
-  font-size: 3.5rem;
-  color: var(--secondary-color);
+  font-size: 2rem;
 }
 
 .change-text {
   color: var(--red-color);
-  font-size: 2.4rem;
+  font-size: 3rem;
 }
 
 .change-text::after {
   content: "";
-  animation: changetext 5s infinite linear;
+  animation: changetext 3s infinite ease;
 }
 
 @keyframes changetext {
   0% {
+    content: "Numan Ahmed";
+  }
+  60% {
     content: "Web Developer";
   }
-  35% {
-    content: "UI/UX Designer";
-  }
-  70% {
-    content: "Freelancer";
-  }
   100% {
-    content: "Content Writer";
+    content: "Freelancer";
   }
 }
 
@@ -254,57 +227,35 @@ main {
   font-family: sans-serif;
 }
 
-/* 
-.container {
-    padding-bottom: 2rem;
-} 
-.container-tittle {
-  text-transform: capitalize;
-  text-align: center;
-  padding: 1rem;
-  border-bottom: 1px solid var(--light-color);
-  background: var(--light-color);
-  color: var(--nav-color);
-}
-
-.container-body {
-  text-transform: capitalize;
-  padding: 1rem 2rem 2rem 2rem;
-  border-bottom: 1px solid var(--light-color);
-} 
-*/
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 701px) {
   body {
     margin: 0 0 0 3rem;
   }
 
   .navBar {
     width: 3rem;
+    background-color: var(--dark-color);
   }
 
-  .link-icons, 
+  .link-icons,
   .link-text {
     font-size: 1rem;
   }
 
-  .link-text{
-  padding-left: 3.5rem;
+  .link-text {
+    padding-left: 3.5rem;
   }
 
   .hamburger-menu {
-    /* margin: 0.5rem 3rem; */
-    /* background-color: #000399; */
     width: 100%;
     height: 3.4rem;
-    /* margin-left: 2.5rem; */
     cursor: pointer;
   }
 
   .hamburger {
     position: absolute;
     top: 3.5%;
-    left: .5rem;
+    left: 0.5rem;
     background-color: var(--light-color);
     width: 24px;
     height: 4px;
@@ -330,13 +281,11 @@ main {
     transform: translateY(10px);
   }
 
-  .body-head {
-    padding: 0 3rem;
-    align-items: flex-start;
-  }
-
   .body-head-tittle {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
+  }
+  .change-text {
+    font-size: 1.5rem;
   }
 
   .container {
@@ -365,7 +314,7 @@ main {
 
   .profile-link-icon,
   .profile-link-text {
-    font-size: .8rem;
+    font-size: 0.8rem;
     padding: 0 0.1rem;
   }
 
@@ -374,6 +323,8 @@ main {
     justify-content: center;
     align-items: center;
     width: 100%;
+    min-width: 15rem;
+    padding: 0 2rem;
   }
 
   .contact-form h1 {
